--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,15 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-# Go workspace file
-go.work
-go.work.sum
-
 # env file
 .env
+
+#IDE files
+**/.settings/
+**/.project
+**/.classpath
+**/.idea/
+**/.iml
+
+# Mac OS Specific File #
+.DS_Store
