--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -6,14 +6,14 @@ services:
       - 27018:27017
     environment:
       - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=SBaitman123!
+      - MONGO_INITDB_ROOT_PASSWORD=SB****3!
   mongo-express:
     image: mongo-express
     ports:
       - 8081:8081
     environment:
       - ME_CONFIG_BASICAUTH_USERNAME=admin
-      - ME_CONFIG_BASICAUTH_PASSWORD=SBaitman123!
+      - ME_CONFIG_BASICAUTH_PASSWORD=SB****3!
       - ME_CONFIG_MONGODB_PORT=27018
       - ME_CONFIG_MONGODB_SERVER=sbaitman-mongo
     #volumes:
