Adding kafka to docker-compose

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -30,6 +30,10 @@ services:
     image: redis
     ports:
       - 6379:6379
+  kafka:
+    image: apache/kafka
+    ports:
+      - 9092:9092
 volumes:
   mongo-data:
     driver: local
