Fixing docker-compose.yaml

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -6,26 +6,26 @@ services:
       - 27018:27017
     environment:
       - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=SB****3!
+      - MONGO_INITDB_ROOT_PASSWORD=SB****n123!
   mongo-express:
     image: mongo-express
     ports:
       - 8081:8081
     environment:
       - ME_CONFIG_BASICAUTH_USERNAME=admin
-      - ME_CONFIG_BASICAUTH_PASSWORD=SB****3!
+      - ME_CONFIG_BASICAUTH_PASSWORD=SB****n123!
       - ME_CONFIG_MONGODB_PORT=27018
       - ME_CONFIG_MONGODB_SERVER=sbaitman-mongo
-    #volumes:
-    #  - mongo-data: /data/db
+    volumes:
+      - mongo-data:/data/db
   postgres:
     image: postgres
     ports:
       - 5433:5432
     environment:
-      - POSTGRES_PASSWORD=SBaitman123!
-    #volumes:
-    #  - postgres-data: var/lib/postgresql/data
+      - POSTGRES_PASSWORD=SB****n123!
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
   redis:
     image: redis
     ports:
@@ -34,10 +34,24 @@ services:
     image: apache/kafka
     ports:
       - 9092:9092
+  clickhouse-server:
+    image: clickhouse/clickhouse-server:latest
+    ports:
+      - "8125:8123"
+      - "9001:9000"
+    volumes:
+      - clickhouse-data:/var/lib/clickhouse
+    environment:
+      - ALLOW_EMPTY_PASSWORD=no
+      - CLICKHOUSE_USER=admin
+      - CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT=1
+      - CLICKHOUSE_PASSWORD=password@123
 volumes:
   mongo-data:
     driver: local
   postgres-data:
+    driver: local
+  clickhouse-data:
     driver: local
 
 
